tests/istio_testcases/example_policies/fly-istio-ingress-test/fly-istio-ingress-test-scheme.yaml
namespaceList: ./
podList: ./

networkConfigList:
  - name: fly-istio-ingress-test
    networkPolicyList:
      - fly-gateway.yaml
    expectedWarnings: 0


queries:
  - name: connectivity
    connectivityMap:
      - fly-istio-ingress-test
    outputConfiguration:
      outputFormat: txt
      fwRulesRunInTestMode: false
    expectedOutput: ./fly_istio_ingress_test_connectivity_map.txt
